<resources>
    <string name="app_name">Medic</string>
    <string name="text_onboard">Пропустить</string>
    <string name="text_onboard_2">Завершить</string>
    <string name="title_1">Анализы</string>
    <string name="descriprion_1">Экспресс сбор и получение проб</string>
    <string name="title_2">Уведомления</string>
    <string name="descriprion_2">Вы быстро узнаете о результатах</string>
    <string name="title_3">Мониторинг</string>
    <string name="descriprion_3">Наши врачи всегда наблюдают
за вашими показателями здоровья</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_description">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="enter_mail">Вход по E-mail</string>
    <string name="example">     example@mail.ru</string>
    <string name="next">Далее</string>
    <string name="enter_code">Введите код из E-mail</string>
    <string name="repost">Отправить код повторно можно будет через 60 секунд</string>
    <string name="create_password">Создайте пароль</string>
    <string name="password">Для защиты ваших персональных данных</string>
    <string name="create_tale">Создание карты пациента</string>
    <string name="description_create_1">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="description_create_2">В картах пациентов будут храниться результаты анализов вас и ваших близких.</string>
    <string name="title_activity_main6">MainActivity6</string>
    <string name="find">     Искать анализы</string>
    <string name="news">Акции и новости</string>
    <string name="catalog">Каталог анализов</string>
    <string name="catalog_btn_1">Популярные</string>
    <string name="catalog_btn_2">Covid</string>
    <string name="catalog_btn_3">Комплексные</string>
    <string name="map_sick">Карта пациента</string>
    <string name="title_sick">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="description_sick">В картах пациентов будут храниться результаты анализов вас и ваших близких.</string>
    <string name="save">Сохранить</string>
    <string name="basket">Корзина</string>
    <string name="summ">Сумма</string>
    <string name="order">Перейти к оформлению заказа</string>
    <string name="create_order">Оформление заказа</string>
</resources>