<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:layout_marginBottom="366dp"
        android:width="335dp"
        android:height="48dp"
        android:background="@color/input_email"
        android:ems="10"
        android:hint="@string/example"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="111dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="200dp"
        android:text="@string/enter_mail"
        android:textColor="@color/email"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/hello" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="294dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="516dp"
        android:fontFamily="@font/lato"
        android:text="@string/welcome_description"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="265dp"
        android:backgroundTint="@color/button_before"
        android:onClick="goNext"
        android:text="@string/next"
        android:textColorHint="@color/button_before"
        android:textSize="17dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>