<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="207dp"
        android:layout_height="34dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="521dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/create_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="237dp"
        android:layout_height="23dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="486dp"
        android:fontFamily="@font/lato"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="126dp"
        android:layout_height="24dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="61dp"
        android:fontFamily="@font/lato"
        android:onClick="goNext"
        android:text="@string/text_onboard"
        android:textAlignment="textEnd"
        android:textColor="@color/blue_skip"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="184dp"
        android:layout_height="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="300dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/e_all" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="6dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/e_all" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/e_all" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/e_all" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="257dp"
        android:layout_height="333dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/numbers" />

</androidx.constraintlayout.widget.ConstraintLayout>