<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent" >


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="656dp"
    android:layout_above="@+id/bottom_panel"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="3dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="-2dp"
    android:layout_marginBottom="-2dp"
    android:background="#ffffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="361dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="#F5F5F9"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="textPersonName"
            android:text="   Искать анализы"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="214dp"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/news"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/banner_1"
                    android:layout_marginLeft="20dp"/>

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/banner_1" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/banner_1" />

            </LinearLayout>
        </HorizontalScrollView>


        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/catalog"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="435dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="132dp">


                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:height="24dp"
                    android:backgroundTint="@color/blue_skip"
                    android:text="@string/catalog_btn_1"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    app:cornerRadius="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:height="24dp"
                    android:backgroundTint="@color/input_email"
                    android:text="@string/catalog_btn_2"
                    android:textColor="@color/email"
                    android:textSize="15dp"
                    app:cornerRadius="10dp" />

                <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="24dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                android:backgroundTint="@color/input_email"
                android:text="@string/catalog_btn_3"
                android:textColor="@color/email"
                android:textSize="15dp"
                app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:height="24dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:backgroundTint="@color/input_email"
                    android:text="@string/title_1"
                    android:textColor="@color/email"
                    android:textSize="15dp"
                    app:cornerRadius="10dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2">

            <ImageView
                android:id="@+id/i1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add_price"
                app:srcCompat="@drawable/card1" />

            <ImageView
                android:id="@+id/i2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add_price"
                app:srcCompat="@drawable/card2" />

            <ImageView
                android:id="@+id/i3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add_price"
                app:srcCompat="@drawable/card3" />

            <ImageView
                android:id="@+id/i4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="add_price"
                app:srcCompat="@drawable/card4" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


    <LinearLayout
        android:layout_marginBottom="70dp"
        android:id="@+id/bottom_panel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:visibility="invisible"
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="В корзину"
            android:onClick="goToBasket"
            android:fontFamily="@font/lato_bold"
            android:textAlignment="center"
            android:backgroundTint="@color/blue_skip"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cornerRadius="10dp"/>
    </LinearLayout>
<!--    нижнее меню-->
    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tabbar1" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tabbar2" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:onClick="goToEmptyActivity"
            app:srcCompat="@drawable/tabbar3" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="goToProfile"
            app:srcCompat="@drawable/tabbar4" />
    </LinearLayout>

</RelativeLayout>
