<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity9">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="46dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="349dp"
        android:layout_marginBottom="599dp"
        android:onClick="goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_renext" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="143dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="248dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/basket"
        android:textColor="@color/black"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:srcCompat="@drawable/card_bascet1" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19"
        app:srcCompat="@drawable/card_bascet2" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:onClick="cleanBasket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basket" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="168dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/summ"
        android:textColor="@color/black"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:layout_constraintVertical_bias="0.35" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:layout_constraintVertical_bias="0.329"
        app:srcCompat="@drawable/price" />

    <Button
        android:id="@+id/order"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_skip"
        android:fontFamily="@font/lato_bold"
        android:onClick="goToOrder"
        android:text="@string/order"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:layout_constraintVertical_bias="0.786"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>